KNOX-792 - Fix FindBugs "performance" issues - Colm O hEigeartaigh via lmccay